syntax = "proto3";

package auth.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "why-sys/api/auth/v1;v1";

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/register"
      body: "*"
    };
  }

  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }

  rpc Check(CheckRequest) returns (CheckResponse) {
    option (google.api.http) = {
      post: "/v1/auth/check"
      body: "*"
    };
  }
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3 [(validate.rules).string.email = true];
  uint32 age = 4 [(validate.rules).uint32 = {
    gte : 0,
    lte : 130,
  }];
  google.protobuf.Timestamp brith = 5;
}

message RegisterResponse {
  string msg = 1;
}

message CheckRequest {
  string method = 1 [(validate.rules).string = {
    in: [ "GET", "POST","DELETE","PUT" ]
  }];
  string uri = 2 [(validate.rules).string.uri_ref = true];
}

message CheckResponse {
  bool ok = 1;
  string msg = 2;
}

message LoginRequest {
  string username = 1 [(validate.rules).string = {
    min_len : 6
    max_len : 12
  }];
  string password = 2 [(validate.rules).string = {
    min_len : 6
    pattern : "^[a-zA-Z0-9]+$"
  }];
}

message LoginResponse {
  string token = 1;
}